--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
         <version>2.12.0</version>
     </dependency>
 
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13-beta-2</version>
+        <scope>test</scope>
+    </dependency>
 </dependencies>
 
 </project>
